--- a/package.json
+++ b/package.json
@@ -11,13 +11,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@taiga-ui/addon-charts": "^3.60.0",
+    "@taiga-ui/addon-commerce": "^3.60.0",
+    "@taiga-ui/addon-doc": "^3.60.0",
+    "@taiga-ui/addon-mobile": "^3.60.0",
+    "@taiga-ui/addon-preview": "^3.60.0",
+    "@taiga-ui/addon-table": "^3.60.0",
+    "@taiga-ui/addon-tablebars": "^3.60.0",
+    "@taiga-ui/cdk": "^3.60.0",
+    "@taiga-ui/core": "^3.60.0",
+    "@taiga-ui/icons": "^3.60.0",
+    "@taiga-ui/kit": "^3.60.0",
+    "@taiga-ui/layout": "^3.60.0",
+    "@taiga-ui/styles": "^3.60.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -26,6 +43,7 @@
     "@angular-devkit/build-angular": "^16.0.5",
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
